@@ -2,7 +2,7 @@ lsscsi (0.33-0.1) unstable; urgency=low
 
   * new upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Thu, 22 Jun 2023 23:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 22 Sep 2023 20:00:00 -0400
 
 lsscsi (0.32-0.1) unstable; urgency=low
 
