@@ -1,9 +1,11 @@
 Linux utility for listing SCSI devices.
 
-Changelog for pre-release lsscsi-0.33 [20230623] [svn: r192]
+Changelog for pre-release lsscsi-0.33 [20230922] [svn: r193]
   - experimental: add --json[=JO] and --js-file=JFN for
     JSON output; changed short form syntax to -j[=JO]
   - add ls_name_value sysfs overview script
+  - add --sysroot=AR_PT option for compatibilty with lsblk,
+    lsmem and lscpu
   - change '-w' output to step over designator type prefix
     (e.g. '3' for NAA)
   - add '-ww' to mean: really use
